# RetroEdit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: config.h  editor.h  syntax.h  terminal.h  vcs.h
src/: config.cpp  editor.cpp  main.cpp  syntax.cpp  terminal.cpp  vcs.cpp
